# amethyst_extensions

./: Cargo.toml  README.md
examples/samus/: main.rs
examples/samus/resources/: animation.ron  display_config.ron  samus.ron
examples/tilemap/: main.rs
examples/tilemap/resources/: display_config.ron  map.tmx
resources/shaders/: tilemap_f.glsl  tilemap_v.glsl
src/: lib.rs
src/prefab/: sprite.rs
src/tilemap/: mod.rs  tilemap_pass.rs
