[package]
name = "amethyst_extensions"
version = "0.1.0"
authors = ["Jeremiah <jeremiahcrosby@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst" }
serde = "1.0"
serde_derive = "1.0"
genmesh = "0.4"
derivative = "1.0.2"
tiled = "0.7.2"
gfx = "0.17.1"
glsl-layout = { version = "0.1.1", features = ["gfx"] }
log = { version = "0.4.6", features = ["serde"] }